--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,33 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model NewUser
+
+@if(Model != null)
+{
+    <h1>@Model.UserName</h1>
+}
 <div class="text-center">
     <h1 class="display-4">Welcome to IDG Coffee Shop!</h1>
 </div>
+
+<div class="row">
+
+    <div class="col-md-3">
+        <h3>Coffees & Drinks</h3>
+        <ul>
+            <li>Caramel Latte</li>
+            <li>Cuban Coffee</li>
+            <li>Cafe con Leche</li>
+            <li>Frap</li>
+            <li>Hot Chocolate</li>
+        </ul>
+
+
+    </div>
+</div>
+
+<button type="submit"> Order </button>
 
 <style>
 
@@ -31,32 +55,17 @@
         background-color: antiquewhite;
         margin-right: 85%;
         color: #423a3a;
-        font-weight: 150;
+        font-weight: 500;
     }
-    button{
-        margin-top:4px;
+
+    button {
+        margin-top: 4px;
     }
 </style>
 
 
-<div class="row">
-
-    <div class="col-md-3">
-        <h3>Coffees & Drinks</h3>
-        <ul>
-            <li>Caramel Latte</li>
-            <li>Cuban Coffee</li>
-            <li>Cafe con Leche</li>
-            <li>Frap</li>
-            <li>Hot Chocolate</li>
-        </ul>
 
 
-    </div>
-</div>
 
-<button type ="submit"> Order </button>
-
- 
 
 
