--- a/Views/NewUser/Index.cshtml
+++ b/Views/NewUser/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+@model List<NewUser>
 
-@*still need to make the registration method for the controller and action*@
-<a class="nav-link text-dark" asp-area="" asp-controller="NewUser" asp-action="RegisterUser">Register New Account</a>
+
+
